--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,6 +1,5 @@
 .header {
   height: 56px;
-  margin-bottom: 120px;
   background-color: black;
   color: white;
 }
